[gd_scene load_steps=6 format=2]

[ext_resource path="res://assets/fonts/neodgm_pro.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://scenes/LocalCard.gd" type="Script" id=2]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.745098, 0.831373, 0.988235, 1 )
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20
shadow_size = 2
shadow_offset = Vector2( 2, 2 )

[sub_resource type="DynamicFont" id=2]
size = 30
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 18
font_data = ExtResource( 1 )

[node name="LocalCard" type="Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -1080.0
margin_bottom = -548.0
rect_min_size = Vector2( 220, 220 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Container" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 20.0
margin_top = 20.0
margin_right = -20.0
margin_bottom = -20.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Name" type="Label" parent="Container"]
margin_right = 180.0
margin_bottom = 31.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0.694118, 0.631373, 0.631373, 1 )
text = "서울"

[node name="TotalAndNewCase" type="Label" parent="Container"]
margin_top = 35.0
margin_right = 180.0
margin_bottom = 54.0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0.470588, 0.470588, 0.470588, 1 )
text = "확진자 :"

[node name="Value" type="Label" parent="Container/TotalAndNewCase"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 70.0
margin_top = -9.5
margin_right = 150.0
margin_bottom = 9.5
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 1, 0, 0, 1 )
text = "11111"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TotalRecovered" type="Label" parent="Container"]
self_modulate = Color( 0.470588, 0.470588, 0.470588, 1 )
margin_top = 58.0
margin_right = 180.0
margin_bottom = 77.0
custom_fonts/font = SubResource( 3 )
text = "완치자 : "

[node name="Value" type="Label" parent="Container/TotalRecovered"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 70.0
margin_top = -9.5
margin_right = 150.0
margin_bottom = 9.5
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0, 0.517647, 0.0431373, 1 )
text = "11111"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TotalDeath" type="Label" parent="Container"]
self_modulate = Color( 0.470588, 0.470588, 0.470588, 1 )
margin_top = 81.0
margin_right = 180.0
margin_bottom = 100.0
custom_fonts/font = SubResource( 3 )
text = "사망자 :  "

[node name="Value" type="Label" parent="Container/TotalDeath"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 70.0
margin_top = -9.5
margin_right = 150.0
margin_bottom = 9.5
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0.470588, 0.435294, 0.435294, 1 )
text = "11111"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Percentage" type="Label" parent="Container"]
self_modulate = Color( 0.470588, 0.470588, 0.470588, 1 )
margin_top = 104.0
margin_right = 180.0
margin_bottom = 123.0
custom_fonts/font = SubResource( 3 )
text = "발생률 : "

[node name="Value" type="Label" parent="Container/Percentage"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 70.0
margin_top = -9.5
margin_right = 150.0
margin_bottom = 9.5
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "11111"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NewCCase" type="Label" parent="Container"]
self_modulate = Color( 0.470588, 0.470588, 0.470588, 1 )
margin_top = 127.0
margin_right = 180.0
margin_bottom = 146.0
custom_fonts/font = SubResource( 3 )
text = "지역발생 : "

[node name="Value" type="Label" parent="Container/NewCCase"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 70.0
margin_top = -9.5
margin_right = 150.0
margin_bottom = 9.5
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0.945098, 0.45098, 0.121569, 1 )
text = "11111"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NewFCase" type="Label" parent="Container"]
self_modulate = Color( 0.470588, 0.470588, 0.470588, 1 )
margin_top = 150.0
margin_right = 180.0
margin_bottom = 169.0
custom_fonts/font = SubResource( 3 )
text = "해외유입 : "

[node name="Value" type="Label" parent="Container/NewFCase"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 70.0
margin_top = -9.5
margin_right = 150.0
margin_bottom = 9.5
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0.635294, 0.12549, 0.12549, 1 )
text = "11111"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}
